# tab-chain-django

./: .env.example  .gitignore  Dockerfile  README.md  api.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
docker/django/: entrypoint.sh
game/: admin.py  ai_client.py  models.py  serializers.py  test_ai_play.py  tests.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_initial.py
game_api/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_first_name_user_last_name.py
